--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -808,7 +808,7 @@ ko:
         title: 회사 관리
     contacts:
         index:
-            title: 연락처 리스트
+            title: 연락처
             empty: 연락처가 없습니다
         show:
             title: 연락처 상세정보
