--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -509,6 +509,8 @@ ko:
                 password: 비밀번호
                 password_confirmation: 비밀번호 확인
                 google_account: Google 계정
+                daum_account: 다음 계정
+                nate_account: 네이트 계정
                 notify_email: Email
                 boxcar_account: Boxcar 계정
                 redmine_account: Redmine 계정
