--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -1121,10 +1121,10 @@ ko:
             successfully_changed: 성공적으로 변경하였습니다.
         google:
             create: 구글 앱스 계정 생성하기
-            destroy: 제거하기
+            destroy: 구글 앱스 계정 제거하기
         redmine:
             create: 레드마인 계정 생성하기
-            destroy: 제거하기
+            destroy: 레드마인 계정 제거하기
         google_apps:
             title: 구글 앱스 계정이 등록된 사용자들
         error:
