--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -885,6 +885,8 @@ ko:
             title: 인사정보관리 - 사원목록
             list_retired: 퇴직자 목록 조회
             list_current: 현 재직자 목록 조회
+            list_joined: 정사원 목록 조회
+            list_not_joined: 입사지원자 목록 조회
             retired: 퇴직자
             current: 재직자
         show:
