--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -302,6 +302,7 @@ ko:
                 redmine_username: 레드마인 관리자 계정
                 redmine_password: 레드마인 관리자 비밀번호
                 default_password: 기본 비밀번호
+                apply_admin_id: 입사지원서 담당자
 
             contact:
                 name: 이름
