--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -1079,10 +1079,7 @@ ko:
         purchase_sales_bill: 매입/매출 세금계산서
         title: 세금계산서 관리
     taxbill_items:
-        new:
-            title: 새로운 내역 추가
-        edit:
-            title: 세금계산서 내역 수정
+        title: 세금계산서 내역
     taxmen:
         empty: 담당자가 없습니다.
         new:
