--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -818,6 +818,8 @@ ko:
             empty: 연락처가 없습니다
         show:
             title: 연락처 상세정보
+            private: "비공개 : "
+            public: "전체 공개 : "
         new:
             title: 연락처 만들기
             link: 새로운 연락처 만들기
