--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -1017,14 +1017,14 @@ ko:
         index:
             this_years_working_days: "년의 근무일수 : "
             month_and_count: "%{m}월: %{c}일"
-    격:
+    ledger_accounts:
         title: 원장 관리
         index:
             empty: 계정이 없습니다
         show:
             title: 원장 계정 상세정보
             period: 기간
-            price: 가
+            price: 가격
     main:
         index:
             human_resources: 인사관리
@@ -1134,6 +1134,7 @@ ko:
         show:
             title: 프로젝트 상세 내역
             allocation_ratio: 할당비율 조정
+            users: Users
         new:
             title: 새 프로젝트 작성
         edit:
@@ -1142,7 +1143,6 @@ ko:
             confirm_complete: 프로젝트를 종료하시겠습니까?
         assign:
             title: 할당 비율 조정
-<<<<<<< HEAD
             not_hundred: 할당 비율이 100%가 아닙니다.
     reports:
         info:
@@ -1151,7 +1151,6 @@ ko:
             rollback: 반려
             report: 상신
             approve: 승인
-=======
             not_hundred: 할당 비율이 100%가 아닙니다
     reports:
       report:
@@ -1169,8 +1168,6 @@ ko:
         body:
           default: "%{prev}님이 %{next}님에게 결제를 반려하였습니다. \n %{url}"
           hrinfo: "아래 링크를 통해서 확인 가능합니다. \n %{url}"
-
->>>>>>> aea3622324c7948ca632f7587f1de59e5bae9989
     required_tags:
         index:
             title: 필수 태그 목록
@@ -1186,8 +1183,10 @@ ko:
             title: 세금계산서 관리
             empty: 세금계산서가 없습니다.
             total: 전체
+            total_eng: Total
         show:
             title: 세금계산서 내역
+            dot: ...
         new:
             title: 새로운 세금계산서 입력
             picture: 첨부파일
