--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -990,6 +990,7 @@ ko:
             list_not_joined: 입사지원자 목록 조회
             retired: 퇴직자
             current: 재직자
+            total: 총인원
         show:
             title: 인사정보
             related_documents: 관련 문서
