--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -570,6 +570,8 @@ ko:
             fail_save: 연락처를 저장할 수 없었습니다.
             success_read: 성공적으로 연락처를 읽어왔습니다.
             fail_read: 연락처를 읽어올 수 없었습니다.
+        used_vacations:
+            report: 연차를 신청하였습니다. 신청 후에는 결재를 올려주세요.
     accessors:
         info:
             permissions: 권한
