--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -604,6 +604,12 @@ ko:
         hrinfo:
             join: 재직자
             retire: 퇴직자
+        ledger_account:
+            fund: 자본
+            asset: 자산
+            debt: 부채
+            expense: 비용
+            benefit: 수익
     accessors:
         info:
             permissions: 권한
