--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -999,6 +999,7 @@ ko:
             title: 연락처 상세정보
             private: "비공개 : "
             public: "전체 공개 : "
+            etc: 기타
         new:
             title: 연락처 만들기
             link: 새로운 연락처 만들기
