--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -127,7 +127,7 @@ ko:
             document: 문서
             expense_report: 지출 내역서
             holiday: 휴일관리
-            hrinfo: 인사정보
+            employee: 인사정보
             ledger_account: 원장 계정
             namecard: 명함정보
             pay_schedule: 기본급
@@ -376,7 +376,7 @@ ko:
                 juminno: 주민등록번호
             expense_report:
                 owner: 작성자
-                hrinfo_id: 작성자
+                employee_id: 작성자
                 target: 지출 대상
                 project: 프로젝트
                 project_id: 프로젝트
@@ -388,7 +388,7 @@ ko:
             holiday:
                 theday: 휴일날짜
                 dayname: 휴일명목
-            hrinfo:
+            employee:
                 juminno: 주민등록번호
                 retired_on: 퇴직일
                 companyno: 사번
@@ -602,7 +602,7 @@ ko:
         expense_report:
             debit: 차변
             credit: 대변
-        hrinfo:
+        employee:
             join: 재직자
             retire: 퇴직자
             request: 수정 요청
@@ -1105,7 +1105,7 @@ ko:
             detail_expense: 지출내역서 상세정보
     groups:
         title: 그룹관리
-    hrinfos:
+    employees:
         index:
             title: 인사정보관리 - 사원목록
             list_retired: 퇴직자 목록 조회
@@ -1319,17 +1319,17 @@ ko:
         report:
             title:
                 default: "%{prev}님이 %{next}님에게 결재를 요청하였습니다"
-                hrinfo: "%{next}님에게 새로운 입사지원이 들어왔습니다."
+                employee: "%{next}님에게 새로운 입사지원이 들어왔습니다."
             body:
                 default: "%{prev}님이 %{next}님에게 결재를 요청하였습니다. \n %{url}"
-                hrinfo: "아래 링크를 통해서 확인 가능합니다. \n %{url}"
+                employee: "아래 링크를 통해서 확인 가능합니다. \n %{url}"
         rollback:
             title:
                 default: "%{prev}님이 %{next}님에게 결재를 반려하였습니다"
-                hrinfo: "%{next}님에게 입사지원 수정요청이 들어왔습니다"
+                employee: "%{next}님에게 입사지원 수정요청이 들어왔습니다"
             body:
                 default: "%{prev}님이 %{next}님에게 결재를 반려하였습니다. \n %{url}"
-                hrinfo: "아래 링크를 통해서 확인 가능합니다. \n %{url}"
+                employee: "아래 링크를 통해서 확인 가능합니다. \n %{url}"
     required_tags:
         index:
             title: 필수 태그 목록
