--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -1343,7 +1343,7 @@ ko:
         required_tags: RequiredTags
     shared:
         footer:
-            mint: mint office - m17.2
+            mint: mint office - m17.2.hotfix1
         show_attachment:
             download: "다운로드"
         attachments:
