--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -134,6 +134,7 @@ ko:
             payroll_item: 급여 항목
             payroll_category: 급여구분
             payment: 연봉
+            permission: 권한
             pettycash: 소액현금
             posting: 전표
             project: 프로젝트
