--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -526,6 +526,8 @@ ko:
                 to: 종료
                 period: 기간
                 note: 사유
+                type_: 항목
+                type_title: 항목
             account:
                 name: 계정명
                 password: 비밀번호
