--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -1353,7 +1353,7 @@ ko:
         required_tags: RequiredTags
     shared:
         footer:
-            mint: mint office - m17.3
+            mint: mint office - m17.3hotfix1
         show_attachment:
             download: "다운로드"
         attachments:
