--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -593,6 +593,8 @@ ko:
         bank_account:
             shinhan: 신한 은행
             ibk: 기업 은행
+            hsbc: HSBC
+            nonghyup: 농협
         bank_transaction:
             fail: 에 실패했습니다. 입력 값을 다시 확인해주세요.
         card_approved_source:
