--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -376,6 +376,8 @@ ko:
                 bank_account_id: 결제은행
             dayworker:
                 juminno: 주민등록번호
+                bankbook: 통장
+                bankbook_id: 통장
             dayworker_tax:
                 dayworker: 원천징수 대상자
                 reason: 사유
